--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                             <div class="cmb3-1">
                                 <div>
                                     <h5>Mathematics</h5>
-                                    <p>Lorem, ipsum dolor sit amet.</p>
+                                    <p>Lorem ipsum dolor sit amet.</p>
                                 </div>
                                 <div>
                                     <h5>Science</h5>
@@ -474,7 +474,7 @@
                             <div class="cmb4-1">
                                 <div>
                                     <h5>Mathematics</h5>
-                                    <p>Lorem, ipsum dolor sit amet.</p>
+                                    <p>Lorem ipsum dolor sit amet.</p>
                                 </div>
                                 <div>
                                     <h5>Science</h5>
@@ -509,7 +509,7 @@
                             </div>
                             <div class="cmb4-5">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
                     </div>
@@ -563,8 +563,8 @@
                                 </div>
                             </div>
                             <div class="cmb5-5">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
                     </div>
